--- a/Portfolio_ChristianLara/package.json
+++ b/Portfolio_ChristianLara/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.3"
+    "@studio-freight/lenis": "^1.0.42",
+    "@tailwindcss/vite": "^4.0.14",
+    "astro": "^5.5.3",
+    "framer-motion": "^12.5.0",
+    "gsap": "^3.12.7",
+    "tailwindcss": "^4.0.14"
   }
 }
