--- a/Portfolio_ChristianLara/package.json
+++ b/Portfolio_ChristianLara/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.5.3",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
+    "solid-js": "^1.9.5",
     "tailwindcss": "^4.0.14"
   }
 }
